<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="@dimen/px_600"
        android:layout_height="@dimen/px_772"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_bg_login"
        android:orientation="vertical"
        android:paddingLeft="@dimen/px_60"
        android:paddingRight="@dimen/px_60">

        <com.ybg.yxym.yueshow.view.CircleImageView
            android:id="@+id/iv_user_avatar"
            android:layout_width="@dimen/px_130"
            android:layout_height="@dimen/px_130"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/px_56"
            android:onClick="onClick"
            android:src="@mipmap/ic_publish"/>

        <EditText
            android:id="@+id/et_user_nickName"
            style="@style/et_30pt_afb6bc_4d5359"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_60"
            android:layout_marginTop="@dimen/px_50"
            android:background="@null"
            android:drawableLeft="@mipmap/ic_mobile"
            android:drawablePadding="@dimen/px_30"
            android:hint="@string/user_name"
            android:inputType="text"
            android:maxLength="10"
            android:paddingLeft="@dimen/px_20"/>

        <View
            style="@style/horizontal_line"
            android:layout_marginTop="@dimen/px_10"/>

        <TextView
            android:id="@+id/tv_user_birthday"
            style="@style/et_30pt_afb6bc_4d5359"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_60"
            android:layout_marginTop="@dimen/px_34"
            android:drawableLeft="@mipmap/ic_birthday"
            android:drawablePadding="@dimen/px_30"
            android:gravity="center_vertical"
            android:onClick="onClick"
            android:paddingLeft="@dimen/px_20"
            android:text="@string/choose_birthday"/>

        <View
            style="@style/horizontal_line"
            android:layout_marginTop="@dimen/px_10"/>

        <TextView
            android:id="@+id/tv_user_gender"
            style="@style/et_30pt_afb6bc_4d5359"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_60"
            android:layout_marginTop="@dimen/px_34"
            android:drawableLeft="@mipmap/ic_gender"
            android:drawablePadding="@dimen/px_30"
            android:gravity="center_vertical"
            android:onClick="onClick"
            android:paddingLeft="@dimen/px_20"
            android:text="@string/choose_gender"/>

        <View
            style="@style/horizontal_line"
            android:layout_marginTop="@dimen/px_10"/>

        <TextView
            style="@style/text_24pt_7dcf2c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px_28"
            android:drawableLeft="@mipmap/ic_tips"
            android:drawablePadding="@dimen/px_20"
            android:text="@string/gender_choose_tips"/>

        <com.ybg.yxym.yueshow.view.processButton.impl.GenerateProcessButton
            android:id="@+id/btn_complete_register"
            style="@style/btn_24pt_7dcf2c_white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_88"
            android:layout_marginTop="@dimen/px_50"
            android:onClick="onClick"
            android:text="@string/complete_register"
            app:pb_textComplete="完成"
            app:pb_textProgress="正在保存数据..."/>
    </LinearLayout>
</RelativeLayout>