<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="@dimen/px_600"
        android:layout_height="@dimen/px_738"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_bg_login"
        android:orientation="vertical"
        android:paddingLeft="@dimen/px_60"
        android:paddingRight="@dimen/px_60">

        <EditText
            android:id="@+id/et_login_mobile"
            style="@style/et_30pt_afb6bc_4d5359"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_60"
            android:layout_marginTop="@dimen/px_50"
            android:background="@null"
            android:drawableLeft="@mipmap/ic_mobile"
            android:drawablePadding="@dimen/px_30"
            android:hint="@string/login_account"
            android:inputType="number"
            android:maxLength="11"
            android:paddingLeft="@dimen/px_20"/>

        <View
            style="@style/horizontal_line"
            android:layout_marginTop="@dimen/px_10"/>

        <EditText
            android:id="@+id/et_login_password"
            style="@style/et_30pt_afb6bc_4d5359"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_60"
            android:layout_marginTop="@dimen/px_34"
            android:background="@null"
            android:drawableLeft="@mipmap/ic_password"
            android:drawablePadding="@dimen/px_30"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingLeft="@dimen/px_20"/>

        <View
            style="@style/horizontal_line"
            android:layout_marginTop="@dimen/px_10"/>

        <Button
            android:id="@+id/btn_login"
            style="@style/btn_30pt_7dcf2c_white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_88"
            android:layout_marginTop="@dimen/px_50"
            android:onClick="onClick"
            android:text="@string/login"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px_40">

            <TextView
                android:id="@+id/tv_forget_password"
                style="@style/text_30pt_4d5359"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:padding="@dimen/px_10"
                android:text="@string/forget_password"/>

            <TextView
                android:id="@+id/tv_register_now"
                style="@style/text_30pt_4d5359"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:onClick="onClick"
                android:padding="@dimen/px_10"
                android:text="@string/register_now"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_open_platform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="@dimen/px_34"
                android:text="@string/or"/>

            <View
                style="@style/horizontal_line"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/tv_open_platform"/>

            <View
                style="@style/horizontal_line"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_open_platform"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px_30">

            <ImageView
                android:id="@+id/iv_login_qq"
                android:layout_width="@dimen/px_100"
                android:layout_height="@dimen/px_100"
                android:onClick="onClick"
                android:src="@mipmap/ic_login_qq"/>

            <ImageView
                android:id="@+id/iv_login_wechat"
                android:layout_width="@dimen/px_100"
                android:layout_height="@dimen/px_100"
                android:layout_centerInParent="true"
                android:onClick="onClick"
                android:src="@mipmap/ic_login_wechat"/>

            <ImageView
                android:id="@+id/iv_login_sina"
                android:layout_width="@dimen/px_100"
                android:layout_height="@dimen/px_100"
                android:layout_alignParentRight="true"
                android:onClick="onClick"
                android:src="@mipmap/ic_login_sina"/>

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
