<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_start_live"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_start_live_bg">

    <!--直播logo-->
    <com.ybg.yxym.yueshow.view.CircleImageView
        android:id="@+id/iv_live_photo"
        android:layout_width="@dimen/px_450"
        android:layout_height="@dimen/px_450"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/px_90"
        android:src="@mipmap/ic_default_girl" />

    <Button
        android:id="@+id/btn_edit_cover"
        android:layout_width="@dimen/px_200"
        android:layout_height="@dimen/px_70"
        android:layout_alignBottom="@id/iv_live_photo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/px_48"
        android:alpha="0.8"
        android:background="@drawable/shape_btn_set_cover"
        android:drawableLeft="@mipmap/ic_live_edit_cover"
        android:paddingLeft="@dimen/px_20"
        android:text="@string/live_edit_cover"
        android:textColor="@color/color_live_word"
        android:textSize="@dimen/px_24" />

    <!--直播标题-->
    <EditText
        android:id="@+id/ed_live_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_live_photo"
        android:layout_marginLeft="@dimen/px_100"
        android:layout_marginRight="@dimen/px_100"
        android:layout_marginTop="@dimen/px_84"
        android:background="@null"
        android:gravity="center_horizontal"
        android:hint="@string/live_title_hint"
        android:singleLine="true"
        android:textColor="@color/color_live_word"
        android:textColorHint="@color/color_live_word"
        android:textSize="@dimen/px_24"
        android:typeface="monospace" />

    <View
        android:id="@+id/line_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_2"
        android:layout_below="@id/ed_live_title"
        android:layout_marginLeft="@dimen/px_120"
        android:layout_marginRight="@dimen/px_120"
        android:layout_marginTop="@dimen/px_10"
        android:background="@color/color_live_word" />


    <RelativeLayout
        android:id="@+id/rl_conversation_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_1"
        android:layout_marginTop="@dimen/px_62">

        <ImageView
            android:id="@+id/iv_live_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px_158"
            android:src="@mipmap/ic_live_conversation_selcet" />

        <TextView
            android:id="@+id/tv_live_conversation_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:hint="@string/live_conversation_hint"
            android:textColor="@color/color_live_word"
            android:textColorHint="@color/color_live_word"
            android:textSize="@dimen/px_24"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/tv_live_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/px_38"
            android:layout_toRightOf="@id/tv_live_conversation_select"
            android:background="@null"
            android:hint="@string/live_select_hint"
            android:textColor="@color/color_live_word"
            android:textColorHint="@color/color_live_word"
            android:textSize="@dimen/px_24"
            android:typeface="monospace" />

    </RelativeLayout>

    <View
        android:id="@+id/line_2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_2"
        android:layout_below="@id/rl_conversation_select"
        android:layout_marginLeft="@dimen/px_120"
        android:layout_marginRight="@dimen/px_120"
        android:layout_marginTop="@dimen/px_10"
        android:background="@color/color_live_word" />

    <Button
        android:id="@+id/btn_start_live"
        style="@style/btn_24pt_7dcf2c_white"
        android:layout_width="@dimen/px_290"
        android:layout_height="@dimen/px_64"
        android:layout_below="@id/line_2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/px_110"
        android:text="@string/live_start" />

</RelativeLayout>