<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_108"
        android:alpha="0.1"
        android:background="#f0000000">

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_108"
        android:background="@null">

        <ImageView
            android:id="@+id/iv_topic"
            android:layout_width="@dimen/px_40"
            android:layout_height="@dimen/px_40"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/px_88"
            android:src="@mipmap/ic_live_conversation_selcet_white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/px_42"
            android:layout_toRightOf="@id/iv_topic"
            android:text="@string/live_title_select_topic"
            android:textColor="@color/color_live_word"
            android:textSize="@dimen/px_32"/>

        <ImageView
            android:id="@+id/iv_dismiss"
            android:layout_width="@dimen/px_44"
            android:layout_height="@dimen/px_34"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/px_30"
            android:src="@mipmap/ic_white_close"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_title"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_108">

            <!--直播话题-->
            <com.ybg.yxym.yueshow.view.CircleImageView
                android:layout_width="@dimen/px_60"
                android:layout_height="@dimen/px_60"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/px_88"
                android:src="@mipmap/ic_topic_doumeng"/>

            <Button
                android:id="@+id/btn_dou_meng"
                android:layout_width="@dimen/px_264"
                android:layout_height="@dimen/px_84"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/selector_topic_button_bg"
                android:text="@string/live_topic_doumeng"
                android:textColor="@drawable/selector_text_color"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_2"
            android:layout_marginLeft="@dimen/px_50"
            android:layout_marginRight="@dimen/px_50"
            android:background="@color/color_live_word"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_108">

            <!--直播话题-->
            <com.ybg.yxym.yueshow.view.CircleImageView
                android:layout_width="@dimen/px_60"
                android:layout_height="@dimen/px_60"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/px_88"
                android:src="@mipmap/ic_topic_shishi"/>

            <Button
                android:id="@+id/btn_shi_shi"
                android:layout_width="@dimen/px_264"
                android:layout_height="@dimen/px_84"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/selector_topic_button_bg"
                android:text="@string/live_topic_shishi"
                android:textColor="@drawable/selector_text_color"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_2"
            android:layout_marginLeft="@dimen/px_50"
            android:layout_marginRight="@dimen/px_50"
            android:background="@color/color_live_word"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_108">

            <!--直播话题-->
            <com.ybg.yxym.yueshow.view.CircleImageView
                android:layout_width="@dimen/px_60"
                android:layout_height="@dimen/px_60"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/px_88"
                android:src="@mipmap/ic_topic_rensheng"/>

            <Button
                android:id="@+id/btn_ren_sheng"
                android:layout_width="@dimen/px_264"
                android:layout_height="@dimen/px_84"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/selector_topic_button_bg"
                android:text="@string/live_topic_rensheng"
                android:textColor="@drawable/selector_text_color"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_2"
            android:layout_marginLeft="@dimen/px_50"
            android:layout_marginRight="@dimen/px_50"
            android:background="@color/color_live_word"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_108">

            <!--直播话题-->
            <com.ybg.yxym.yueshow.view.CircleImageView
                android:layout_width="@dimen/px_60"
                android:layout_height="@dimen/px_60"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/px_88"
                android:src="@mipmap/ic_topic_qizhi"/>

            <Button
                android:id="@+id/btn_qi_zhi"
                android:layout_width="@dimen/px_264"
                android:layout_height="@dimen/px_84"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/selector_topic_button_bg"
                android:text="@string/live_topic_qizhi"
                android:textColor="@drawable/selector_text_color"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_2"
            android:layout_marginLeft="@dimen/px_50"
            android:layout_marginRight="@dimen/px_50"
            android:background="@color/color_live_word"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_108">

            <!--直播话题-->
            <com.ybg.yxym.yueshow.view.CircleImageView
                android:layout_width="@dimen/px_60"
                android:layout_height="@dimen/px_60"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/px_88"
                android:src="@mipmap/ic_topic_changyan"/>

            <Button
                android:id="@+id/btn_chang_yan"
                android:layout_width="@dimen/px_264"
                android:layout_height="@dimen/px_84"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/selector_topic_button_bg"
                android:text="@string/live_topic_changyan"
                android:textColor="@drawable/selector_text_color"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_2"
            android:layout_marginLeft="@dimen/px_50"
            android:layout_marginRight="@dimen/px_50"
            android:background="@color/color_live_word"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_108">

            <!--直播话题-->
            <com.ybg.yxym.yueshow.view.CircleImageView
                android:layout_width="@dimen/px_60"
                android:layout_height="@dimen/px_60"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/px_88"
                android:src="@mipmap/ic_topic_huixiu"/>

            <Button
                android:id="@+id/btn_hui_xiu"
                android:layout_width="@dimen/px_264"
                android:layout_height="@dimen/px_84"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/selector_topic_button_bg"
                android:text="@string/live_topic_huixiu"
                android:textColor="@drawable/selector_text_color"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>